Minor accordion spacing fix

--- a/src/AdminInventory.css
+++ b/src/AdminInventory.css
@@ -15,7 +15,9 @@
 }
 
 .addFormContainer {
-    margin: auto;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
     display: table;
     width: auto;
 }
